--- a/css/main.css
+++ b/css/main.css
@@ -13,10 +13,14 @@ img {
   width: 100%;
 }
 
+h1, h2 h3 {
+  color: #5d8432;
+  font-family: "Patua One", sans-serif;
+}
+
 h1, h2 {
   color: #5d8432;
   text-transform: uppercase;
-  font-family: "Patua One", sans-serif;
 }
 
 figcaption {
